# kanban-code

./: CHANGELOG.md  CLAUDE.md  CONCEPTS.md  Makefile  Package.swift  README.md
.github/workflows/: cli-ci.yml  macos-ci.yml  release.yml  slack-manifest-sync.yml  workflow-pin-check.yml
Scripts/hooks/: hook.sh
Sources/KanbanCode/: App.swift  BoardView.swift  BoardViewMode.swift  CardDetailHelpers.swift  CardDetailTabs.swift  CardDetailView.swift  CardView.swift  ChannelChatView.swift  ChannelShareController.swift  ChatContentCards.swift  ChatMessageView.swift  CodexBoardCoordinator.swift  CodexBoardUI.swift  ColumnView.swift  ContentView.swift  DragAndDrop.swift  ListBoardView.swift  NewTaskDialog.swift  OnboardingWizard.swift  PRBadge.swift  PromptEditor.swift  QuitConfirmationView.swift  SearchOverlay.swift  SettingsView.swift  SidebarReordering.swift  SystemTray.swift
Sources/KanbanCodeCore/Infrastructure/: ChannelsStore.swift  CodexRuntimeStateStore.swift  CoordinationStore.swift  DependencyChecker.swift  SettingsStore.swift  ShellCommand.swift
Sources/KanbanCodeCore/UseCases/: AssignColumn.swift  BoardStore.swift  CardReconciler.swift  CodexLaunchScheduler.swift  CodexLifecycle.swift  ConversationMarkdownExporter.swift  EffectHandler.swift  LaunchSession.swift  SessionSearchQuery.swift
Sources/KanbanCodeLifecycle/: main.swift
Tests/KanbanCodeCoreTests/: BM25Tests.swift  CardLifecycleTests.swift  ChannelReducerTests.swift  ChannelsStoreTests.swift  ChatRenderingPerformanceTests.swift  ConversationMarkdownExporterTests.swift  CoordinationStoreTests.swift  HookManagerTests.swift  ReducerTests.swift  SettingsStoreTests.swift
Tests/KanbanCodeCoreTests/Codex/: CodexAppServerClientTests.swift  CodexAppServerProcessTransportTests.swift  CodexAppServerSessionDiscoveryTests.swift  CodexCLITmuxRuntimeTests.swift  CodexLaunchSchedulerTests.swift  CodexLifecycleInboxTests.swift  CodexLifecycleProjectionTests.swift  (+2 more)
Tests/KanbanCodeTests/: BoardViewModeTests.swift  ChannelUITests.swift  CodexBoardUITests.swift  SystemTrayTests.swift
cli/: package.json
cli/src/: agents.test.ts  announce-suppress.test.ts  cards.ts  channels.test.ts  channels.ts  cli.test.ts  codex-board-projection.test.ts  codex-runtime.test.ts  daemon.test.ts  data.ts  e2e-tmux.test.ts  hooks.ts  kanban.ts  launch.test.ts  paths.ts  reconcile.test.ts  share-cli.ts  slack-bridge-restore.test.ts  slack-bridge.test.ts  slack-format.test.ts  slack-inbox.test.ts  slack-picker.test.ts  slack-reresolve.test.ts  tunnel.ts  types.ts
cli/src/slack/: inbox.ts  (+10 more)
docs/: architecture.md  codex-board.md
docs/plans/: 2026-07-18-001-feat-codex-session-kanban-plan.md
specs/slack/: slack-bridge.feature
specs/system/: headless-runtime.feature
windows/: tsconfig.json
windows/src/: App.tsx  appScale.ts
windows/src-tauri/: Cargo.toml
windows/src-tauri/src/: board_state.rs  browser_webviews.rs  card_reconciler.rs  channels.rs  channels_store.rs  channels_watcher.rs  chat_bootstrap.rs  codex_sessions.rs  coding_assistant.rs  coordination_store.rs  crash_handler.rs  gemini_sessions.rs  git_remote.rs  git_worktree.rs  hook_event_store.rs  hook_manager.rs  images.rs  lib.rs  main.rs  merge_ops.rs  mutagen.rs  process_manager.rs  pushover.rs  remote_shell.rs  remote_status.rs  session_discovery.rs  session_mover.rs  settings_store.rs  shell_command.rs  statusline_installer.rs  tmux.rs
(+46 files in other folders)
