[package]
name = "kanban-code"
version = "0.1.0"
description = "Kanban Code — Windows port"
authors = ["LangWatch"]
edition = "2021"
default-run = "kanban-code"

[lib]
name = "kanban_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kanban-code"
path = "src/main.rs"

[[bin]]
name = "kanban"
path = "src/bin/kanban.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
dirs = "5"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
# default-features = false drops openssl so Windows builds don't need the C openssl toolchain.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri-plugin-pty = "0.1"
tauri-plugin-dialog = "2"
notify = "6"
notify-debouncer-mini = "0.4"
clap = { version = "4", features = ["derive"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
