[package]
name = "kanban-code"
version = "0.1.0"
description = "Kanban Code — Windows port"
authors = ["LangWatch"]
edition = "2021"
default-run = "kanban-code"

[lib]
name = "kanban_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kanban-code"
path = "src/main.rs"

[[bin]]
name = "kanban"
path = "src/bin/kanban.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` enables Window::add_child / WebviewBuilder used by the embedded
# browser tabs (#125). API is gated behind this feature flag in Tauri 2.10
# but is the de facto path for multi-tab embedded browsing on Windows —
# see PR #11616 and discussions #10079/#10264 in tauri-apps/tauri.
tauri = { version = "2", features = ["tray-icon", "image-png", "unstable"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
dirs = "5"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
# default-features = false drops openssl so Windows builds don't need the C openssl toolchain.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri-plugin-pty = "0.1"
tauri-plugin-dialog = "2"
notify = "6"
notify-debouncer-mini = "0.4"
clap = { version = "4", features = ["derive"] }

[profile.dev]
incremental = true
# `unstable` Tauri feature (for #125 add_child) brings the WebView2 multi-
# webview surface in, which pushes the PDB past LNK1140's hard limit on
# Windows. Line-tables-only debug info (debug = 1) keeps stack traces but
# halves the PDB — the dev iteration loop is the same, breakpoints just
# show without locals for non-current-crate code.
debug = 1

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
